--- a/backend/package.json
+++ b/backend/package.json
@@ -5,24 +5,28 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build": "npm run build ./src/index.ts --outdir ./dist",
-    "dev": "npm run src/index.ts",
-    "start": "npm run build && bun run ./dist/index.js"
+    "dev": "tsx src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.8.1",
-    "dotenv": "^17.2.3",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   }
 }
